# ProVision

./: .gitignore  .infisical.json  ANALYTICS_COMPLETE.md  ANALYTICS_IMPLEMENTATION.md  ANALYTICS_PLAN.md  BALL_TRACKING_ANALYSIS.md  COMMIT_PLAN.md  DEMO_SCRIPT.md  README.md  RUNPOD_SETUP.md  SETUP_COMPLETE.md  SHARED_KEY_SETUP_COMPLETE.md  TEAM_SHARED_KEY_INSTRUCTIONS.md  TRACKING_DATA_ANALYSIS.md  TTNET_SETUP.md  VIDEO_TIPS_COMPLETE.md  VIDEO_TIPS_IMPLEMENTATION.md  supabase_schema.sql
backend/: .env.example  build.sh  pyproject.toml  requirements.txt  run.py
backend/gpu_scripts/: DEPLOYMENT_GUIDE.md  RUNPOD_SETUP.md  deploy_to_runpod.sh  model_server.py  setup_runpod.sh  start_server.sh  test_sam2.py
backend/gpu_scripts/tracknet/: model.py  utils.py
backend/migrations/: 001_pose_analysis.sql  002_add_pose_video_path.sql  003_add_stroke_analytics.sql  004_add_player_selection.sql  005_player_ittf_and_recordings.sql  006_player_ittf_fields.sql  007_tournaments.sql  008_add_handedness.sql  008_videos_and_youtube.sql  009_add_camera_facing.sql  009_wtt_database.sql  010_add_person_id_and_stroke_rls.sql  010_add_player_description.sql  010_add_selected_players.sql  011_key_moments.sql  012_global_tournament_access.sql  013_youtube_clips.sql  014_add_stroke_insights.sql
backend/scripts/: backfill_ittf_headshots.py  runpod_setup.sh  sam2_server.py  seed_ittf_pros.py
backend/src/: __init__.py  ssh_client.py
backend/src/api/: main.py
backend/src/engines/: __init__.py  remote_run.py
backend/src/scrapers/: __init__.py  config.py  player_scraper.py
(+137 files in other folders)
